<resources>
    <string name="app_name">JSesh Android App</string>

    <string name="export_bitmap">Export Bitmap</string>
    <string name="export_pdf">Export PDF</string>

    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="edit_hieroglyphic_text">Edit Hieroglyphic Text</string>
    <string name="edit_latin_text">Edit Latin Text</string>
    <string name="edit_italic_text">Edit Italic Text</string>
    <string name="edit_bold_text">Edit Bold Text</string>
    <string name="edit_transliteration_text">Edit Transliteration Text</string>
    <string name="edit_line_numbers">Edit Line Numbers</string>

    <string name="group_manipulation">Group Manipulation</string>
    <string name="group_horizontally">Group Horizontally</string>
    <string name="group_vertically">Group Vertically</string>
    <string name="ligature_elements">Ligature Elements</string>
    <string name="ligature_group_with_hieroglyph">Ligature Group with Hieroglyph</string>
    <string name="ligature_hieroglyph_with_group">Ligature Hieroglyph with Group</string>
    <string name="explode_group">Explode Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="insert_space">Insert Space</string>
    <string name="insert_half_space">Insert Half Space</string>
    <string name="new_page">New Page</string>
    <string name="insert_red_point">Insert Red Point</string>
    <string name="insert_black_point">Insert Black Point</string>
    <string name="shading_symbols">Shading Symbols</string>
    <string name="insert_full_size_shading">Insert Full Size Shading</string>
    <string name="insert_horizontal_shading">Insert Horizontal Shading</string>
    <string name="insert_vertical_shading">Insert Vertical Shading</string>
    <string name="insert_quarter_shading">Insert Quarter Shading</string>
    <string name="shade_zone">Shade Zone</string>
    <string name="unshade_zone">Unshade Zone</string>
    <string name="paint_zone_in_red">Paint Zone in Red</string>
    <string name="paint_zone_in_black">Paint Zone in Black</string>
    <string name="shading">Shading</string>
    <string name="cartouches">Cartouches</string>
    <string name="philological_markup">Philological Markup</string>

    <string name="file">File</string>
    <string name="new_file">New</string>
    <string name="open">Open</string>
    <string name="open_recent">Open Recent</string>
    <string name="clear_recent_files">Clear Recent Files</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="save_as">Save as...</string>
    <string name="import_file">Import</string>
    <string name="export">Export</string>
    <string name="set_as_model">Set as Model</string>
    <string name="use_model_preferences">Use Model Preferences</string>
    <string name="document_properties">Document Properties</string>
    <string name="format">Format</string>
    <string name="text_in_lines">Text in Lines</string>
    <string name="text_in_columns">Text in Columns</string>
    <string name="left_to_right_text">Left to Right Text</string>
    <string name="right_to_left_text">Right to Left Text</string>
    <string name="center_small_signs">Center Small Signs</string>
    <string name="justify_text">Justify Text</string>

    <string name="cadrat_height">Cadrat Height</string>
    <string name="transparency">Transparency</string>
    <string name="directory">Directory</string>
    <string name="file_name">File Name</string>
    <string name="browse">Browse</string>
    <string name="file_format">File Format</string>
    <string name="png">png</string>
    <string name="jpg">jpg</string>
    <string name="default_cadrat_height">32</string>
    <string name="default_bitmap_name">unnamed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="default_file_name">unnamed</string>

    <string name="document_title">Document Title</string>
    <string name="author">Author</string>
    <string name="subject">Subject</string>
    <string name="keywords">Keywords</string>
    <string name="line_height">Line Height</string>
    <string name="page_format">Page Format</string>
    <string name="show_page_numbers">Show page numbers</string>
    <string name="respect_text_layout">Respect text layout</string>
    <string name="encapsulate_pdf">Encapsulate PDF</string>

    <string name="a1_sign_height">\'A1\' Sign Height</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="space_between_quadrants">Space between Quadrants</string>
    <string name="column_skip">Column Skip</string>
    <string name="maximal_quadrant_height">Maximal Quadrant Height</string>
    <string name="maximal_quadrant_width">Maximal Quadrant Width</string>
    <string name="small_font_body">Small Font Body</string>
    <string name="cartouche_line_width">Cartouche Line Width</string>
    <string name="use_lines_for_shading">Use Lines for Shading</string>

    <string name="units">Units</string>
    <string name="zoom">Zoom</string>

    <string name="palette">Palette</string>
    <string name="family">Family</string>
    <string name="sub_family">Sub-Family</string>
    <string name="sub_sub_family">Sub-Sub-Family</string>
    <string name="show_all">Show All</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="user_palette">User Palette</string>
    <string name="values">Values</string>

    <string name="family_latest_signs">Latest signs</string>
    <string name="family_user_palette">Favourite signs</string>
    <string name="family_all">All signs</string>
    <string name="family_tall_narrow">Tall narrow signs</string>
    <string name="family_low_broad">Low broad signs</string>
    <string name="family_low_narrow">Low narrow signs</string>

    <string name="family_a">Man and his occupations</string>
    <string name="family_b">Woman and her occupations</string>
    <string name="family_c">Anthropomorphic Deities</string>
    <string name="family_d">Parts of the human body</string>
    <string name="family_e">Mammals</string>
    <string name="family_f">Parts of Mammals</string>
    <string name="family_g">Birds</string>
    <string name="family_h">Parts of Birds</string>
    <string name="family_i">Amphibious animals, reptiles, etc.</string>
    <string name="family_k">Fishes and parts of fishes</string>
    <string name="family_l">Invertebrata and lesser animals"</string>
    <string name="family_m">Trees and plants</string>
    <string name="family_n">Sky, earth, water</string>
    <string name="family_o">Buildings, parts of buildings, etc.</string>
    <string name="family_p">Ships and parts of ships</string>
    <string name="family_q">Domestic and funerary furniture</string>
    <string name="family_r">Temple furniture and sacred emblems</string>
    <string name="family_s">Crowns, Dress, Staves, etc.</string>
    <string name="family_t">Warfare, hunting, butchery</string>
    <string name="family_u">Agriculture, crafts, and professions</string>
    <string name="family_v">Rope, Fibre, baskets, bags, etc.</string>
    <string name="family_w">Vessels of stone and earthenware</string>
    <string name="family_x">Loaves and cakes</string>
    <string name="family_y">Writings, games, music</string>
    <string name="family_z">Strokes</string>
    <string name="family_aa">Unclassified (J)</string>
    <string name="family_nu">Upper Egypt Nomes</string>
    <string name="family_nl">Lower Egypt Nomes</string>
    <string name="family_ff">Hieratic signs, Gardiner, JEA 15 (&amp;)</string>

    <string name="sign_description">Sign Description</string>
    <string name="sign_info">Sign Info</string>
    <string name="glyph_info">Glyph Info</string>
    <string name="invalid_mdc_format">Invalid MDC format</string>

</resources>
