<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/file">
        <menu>
            <item android:id="@+id/new_file" android:title="@string/new_file"/>
            <item android:id="@+id/open" android:title="@string/open"/>
            <item android:id="@+id/open_recent" android:title="@string/open_recent"/>
            <item android:id="@+id/close" android:title="@string/close"/>
            <item android:id="@+id/save" android:title="@string/save"/>
            <item android:id="@+id/save_as" android:title="@string/save_as"/>
            <item android:id="@+id/import_file" android:title="@string/import_file"/>
            <item android:id="@+id/export" android:title="@string/export">
                <menu>
                    <item android:id="@+id/export_bitmap"
                        android:title="@string/export_bitmap"/>
                </menu>
            </item>
            <item android:id="@+id/set_as_model" android:title="@string/set_as_model"/>
            <item android:id="@+id/use_model_preferences" android:title="@string/use_model_preferences"/>
            <item android:id="@+id/document_properties" android:title="@string/document_properties"/>
            <item android:id="@+id/format" android:title="@string/format">
                <menu>
                    <group
                        android:checkableBehavior="single">
                        <item android:id="@+id/text_in_lines"
                            android:title="@string/text_in_lines"
                            android:checked="true"/>
                        <item android:id="@+id/text_in_columns"
                            android:title="@string/text_in_columns"/>
                    </group>
                    <group
                        android:checkableBehavior="single">
                        <item android:id="@+id/left_to_right_text"
                            android:title="@string/left_to_right_text"
                            android:checked="true"/>
                        <item android:id="@+id/right_to_left_text"
                            android:title="@string/right_to_left_text"/>
                    </group>
                    <item android:id="@+id/center_small_signs"
                        android:title="@string/center_small_signs"
                        android:checkable="true"/>
                    <item android:id="@+id/justify_text"
                        android:title="@string/justify_text"
                        android:checkable="true"/>
                </menu>
            </item>
        </menu>
    </item>

    <item android:title="@string/edit">
        <menu>
            <item android:id="@+id/undo" android:title="@string/undo"/>
            <item android:id="@+id/redo" android:title="@string/redo"/>
            <item android:id="@+id/cut" android:title="@string/cut"/>
            <item android:id="@+id/copy" android:title="@string/copy"/>
            <item android:id="@+id/paste" android:title="@string/paste"/>
            <item android:id="@+id/duplicate" android:title="@string/duplicate"/>
            <item android:id="@+id/delete" android:title="@string/delete"/>
            <item android:id="@+id/select_all" android:title="@string/select_all"/>
            <item android:id="@+id/deselect_all" android:title="@string/deselect_all"/>
        </menu>
    </item>

    <item android:title="@string/group_manipulation">
        <menu>
            <item android:id="@+id/group_horizontally" android:title="@string/group_horizontally"/>
            <item android:id="@+id/group_vertically" android:title="@string/group_vertically"/>
            <item android:id="@+id/ligature_elements" android:title="@string/ligature_elements"/>
            <item android:id="@+id/ligature_group_with_hieroglyph" android:title="@string/ligature_group_with_hieroglyph"/>
            <item android:id="@+id/ligature_hieroglyph_with_group" android:title="@string/ligature_hieroglyph_with_group"/>
            <item android:id="@+id/explode_group" android:title="@string/explode_group"/>
            <item android:id="@+id/edit_group" android:title="@string/edit_group"/>
            <item android:id="@+id/insert_space" android:title="@string/insert_space"/>
            <item android:id="@+id/insert_half_space" android:title="@string/insert_half_space"/>
            <item android:id="@+id/new_page" android:title="@string/new_page"/>
            <item android:id="@+id/insert_red_point" android:title="@string/insert_red_point"/>
            <item android:id="@+id/insert_black_point" android:title="@string/insert_black_point"/>
            <item android:id="@+id/shading_symbols" android:title="@string/shading_symbols">
                <menu>
                    <item android:id="@+id/insert_full_size_shading" android:title="@string/insert_full_size_shading"/>
                    <item android:id="@+id/insert_horizontal_shading" android:title="@string/insert_horizontal_shading"/>
                    <item android:id="@+id/insert_vertical_shading" android:title="@string/insert_vertical_shading"/>
                    <item android:id="@+id/insert_quarter_shading" android:title="@string/insert_quarter_shading"/>
                </menu>
            </item>
            <item android:id="@+id/shade_zone" android:title="@string/shade_zone"/>
            <item android:id="@+id/unshade_zone" android:title="@string/unshade_zone"/>
            <item android:id="@+id/paint_zone_in_red" android:title="@string/paint_zone_in_red"/>
            <item android:id="@+id/paint_zone_in_black" android:title="@string/paint_zone_in_black"/>
            <item android:id="@+id/shading" android:title="@string/shading"/>
            <item android:id="@+id/cartouches" android:title="@string/cartouches"/>
            <item android:id="@+id/philological_markup" android:title="@string/philological_markup"/>
        </menu>
    </item>




</menu>